councilor initial implementation

--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -85,7 +85,7 @@
 			#> Democratization:	Administrators produce +1 unity and amenities
 			#> Impartiality: 		Rulers increase specialist output by 1% and reduce ethic attraction by 1%
 			#> Hierarchization:	Agenda speed +10/20%, edict upkeep -5-10%
-
+		# /
 		policy_tec_egalitarian_ethic_policy:0 "$ethic_egalitarian$ Ethic Policy"
 		policy_tec_egalitarian_ethic_policy_desc:0 "Everyone deserves dignity and a correct treatment; is in our hands to provide ways to ensure democracy and equality."
 
@@ -120,17 +120,17 @@
 			#> Respect:			Enforcers generate 1.5% ruler output and 0.5% happiness
 			#> Control:			Enforcers generate 1 extra unity and +1% ethic attraction
 			#> Oppression:	Enforcers boost worker/enslaved output by 1%, but reduce -5 less crime
-		#
+		# /
 		policy_tec_authoritarian_ethic_policy:0 "$ethic_authoritarian$ Ethic Policy"
 		policy_tec_authoritarian_ethic_policy_desc:0 "We must ensure our authoritarian ideas represent our vision, and as such we need to ensure the way we manage our population, the way we enforce our rules, is the correct and adequate one."
 
 		policy_option_tec_authoritarian_A:0 "$ethic_authoritarian$ Respect"
 		policy_option_tec_authoritarian_A_name:0 "$policy_option_tec_authoritarian_A$"
-		policy_option_tec_authoritarian_A_desc:0 "Authority means responsibility, and with it the duty at our hands to ensure we serve as a strong guidance for our people.\n\n§EThis policy is focused on £job_enforcer£ §HEnforcers§! Jobs§!\n£job_enforcer£ §YEnforcers§! increase the output of Rulers by §G1.5%§!\n £job_enforcer£ §YEnforcers§! increase £happiness£ §YPop Happiness§! by §G0.5%§!\n"
+		policy_option_tec_authoritarian_A_desc:0 "Authority means responsibility, and with it the duty at our hands to ensure we serve as a strong guidance for our people.\n\n§EThis policy is focused on £job_enforcer£ §HEnforcers§! Jobs§!\n£job_enforcer£ §YEnforcers§! increase the output of Rulers by §G1.5%§!\n£job_enforcer£ §YEnforcers§! increase £happiness£ §YPop Happiness§! by §G0.5%§!\n"
 
 		policy_option_tec_fanatic_authoritarian_A:0 "$policy_option_tec_authoritarian_A$"
 		policy_option_tec_fanatic_authoritarian_A_name:0 "$policy_option_tec_authoritarian_A$"
-		policy_option_tec_fanatic_authoritarian_A_desc:0 "Authority means responsibility, and with it the duty at our hands to ensure we serve as a strong guidance for our people.\n\n§EThis policy is focused on £job_enforcer£ §HEnforcers§! Jobs utility§!\n£job_enforcer£ §YEnforcers§! increase the output of Rulers by §G3%§!\n £job_enforcer£ §YEnforcers§! increase £happiness£ §YPop Happiness§! by §G1%§! each\n"
+		policy_option_tec_fanatic_authoritarian_A_desc:0 "Authority means responsibility, and with it the duty at our hands to ensure we serve as a strong guidance for our people.\n\n§EThis policy is focused on £job_enforcer£ §HEnforcers§! Jobs utility§!\n£job_enforcer£ §YEnforcers§! increase the output of Rulers by §G3%§!\n£job_enforcer£ §YEnforcers§! increase £happiness£ §YPop Happiness§! by §G1%§! each\n"
 
 		policy_option_tec_authoritarian_B:0 "$ethic_authoritarian$ Control"
 		policy_option_tec_authoritarian_B_name:0 "$policy_option_tec_authoritarian_B$"
@@ -142,11 +142,11 @@
 
 		policy_option_tec_authoritarian_C:0 "$ethic_authoritarian$ Oppression"
 		policy_option_tec_authoritarian_C_name:0 "$policy_option_tec_authoritarian_C$"
-		policy_option_tec_authoritarian_C_desc:0 "There is no room for dissidence or protests, there is no room for lack of efficiency or vagrancy; every citizen is a cog in the machine and must slog from sunshine to sunrise to ensure our prosperity.\n\n§EThis policy is focused on £job_enforcer£ §HEnforcers§! Jobs control§!\n £job_enforcer£ §YEnforcers§! increase £job_toiler£ §YWorker§! and §YSlave§! pop output by §G1%§! each\n £job_enforcer£ §YEnforcers§! reduce §R5§! less §Y$tec_loc_crime$§!"
+		policy_option_tec_authoritarian_C_desc:0 "There is no room for dissidence or protests, there is no room for lack of efficiency or vagrancy; every citizen is a cog in the machine and must slog from sunshine to sunrise to ensure our prosperity.\n\n§EThis policy is focused on £job_enforcer£ §HEnforcers§! Jobs control§!\n£job_enforcer£ §YEnforcers§! increase £job_toiler£ §YWorker§! and §YSlave§! pop output by §G1%§! each\n£job_enforcer£ §YEnforcers§! reduce §R5§! less §Y$tec_loc_crime$§!"
 
 		policy_option_tec_fanatic_authoritarian_C:0 "$policy_option_tec_authoritarian_C$"
 		policy_option_tec_fanatic_authoritarian_C_name:0 "$policy_option_tec_authoritarian_C$"
-		policy_option_tec_fanatic_authoritarian_C_desc:0 "TO DO.\n\n§EThis policy is focused on £job_enforcer£ §HEnforcers§! Jobs control§!\n £job_enforcer£ §YEnforcers§! increase £job_toiler£ §YWorker§! and §YSlave§! pop output by §G2%§! each\n£job_enforcer£ §YEnforcers§! reduce §R5§! less §Y$tec_loc_crime$§!"
+		policy_option_tec_fanatic_authoritarian_C_desc:0 "There is no room for dissidence or protests, there is no room for lack of efficiency or vagrancy; every citizen is a cog in the machine and must slog from sunshine to sunrise to ensure our prosperity.\n\n§EThis policy is focused on £job_enforcer£ §HEnforcers§! Jobs control§!\n£job_enforcer£ §YEnforcers§! increase £job_toiler£ §YWorker§! and §YSlave§! pop output by §G2%§! each\n£job_enforcer£ §YEnforcers§! reduce §R5§! less §Y$tec_loc_crime$§!"
 
 		#- Xenophobe
 		#	> +5%-10% main species pop output
@@ -154,7 +154,7 @@
 			#> Isolation:		-10/25% tradition cost
 			#> Suspicion:		+10/25% home territory fire rate
 			#> Hate:				+5/10% damage against rivals
-		#
+		# /
 		policy_tec_xenophobe_ethic_policy:0 "$ethic_xenophobe$ Ethic Policy"
 		policy_tec_xenophobe_ethic_policy_desc:0 "We cannot allow the unseen to catch us off-guard; No matter what, we will be prepared and we will suffer not the xeno."
 
@@ -191,7 +191,7 @@
 			#> Diversity:		+
 			#> Openness:		+10/20% pop growth from immigration
 			#> Integration:	+10-20% xeno pop output
-		#
+		# /
 		policy_tec_xenophile_ethic_policy:0 "$ethic_xenophile$ Ethic Policy"
 		policy_tec_xenophile_ethic_policy_desc:0 "TO DO DESC"
 
@@ -225,7 +225,7 @@
 			#> Discipline:	+10% fire rate. Each ship constructed provide unity based on the type of ship
 			#> Requisition:	10% claim influence cost, +5% resources while at war
 			#> Dominance:		+1 rival, +5% damage against rivals
-		#
+		# /
 		policy_tec_militarist_ethic_policy:0 "$ethic_militarist$ Ethic Policy"
 		policy_tec_militarist_ethic_policy_desc:0 "We must be prepared and have all our military assets ready at any situation, in any case and over any circumstance."
 
@@ -259,7 +259,7 @@
 			#> Tranquility:		+5 stability, +5% output while not at war
 			#> Principles:		+10/20% Empire size from pops, 
 			#> Prevention:		-10% starbase cost, +10% starbase damage
-		#
+		# /
 		policy_tec_pacifist_ethic_policy:0 "$ethic_pacifist$ Ethic Policy"
 		policy_tec_pacifist_ethic_policy_desc:0 "The only way to thrive is ensuring peace; conflict only brings chaos and disorder."
 
@@ -291,7 +291,7 @@
 		#	> Remove pops upkeep - that handled by cults
 		#	> Alter cults so they are more interesting
 		# +10-20% unity
-		#
+		# /
 		policy_tec_spiritualist_ethic_policy:0 "$ethic_spiritualist$ Cult Policy"
 		policy_tec_spiritualist_ethic_policy_desc:0 "Our faith is strong, diverse and divine; its manifestation elevate and guide our kind"
 
@@ -337,11 +337,11 @@
 
 		policy_option_tec_spiritualist_cult_knowledge:0 "Cult of Knowledge"
 		policy_option_tec_spiritualist_cult_knowledge_name:0 "$policy_option_tec_spiritualist_cult_knowledge$"
-		policy_option_tec_spiritualist_cult_knowledge_desc:0 "The divine drives us to know more, to discover the secrets of this universe.\n\n§EThis policy is focused on §HResearch§!§!\n\n"
+		policy_option_tec_spiritualist_cult_knowledge_desc:0 "The divine drives us to know more, to discover the secrets of this universe.\n\n§EThis policy is focused on §HResearch§!§!\n\n£job_priest£ §YPriests§! increase §Y$tec_loc_research_resources$§! by §G0.25%§!"
 
 		policy_option_tec_fanatic_spiritualist_cult_knowledge:0 "$policy_option_tec_spiritualist_cult_knowledge$"
 		policy_option_tec_fanatic_spiritualist_cult_knowledge_name:0 "$policy_option_tec_spiritualist_cult_knowledge$"
-		policy_option_tec_fanatic_spiritualist_cult_knowledge_desc:0 "$policy_option_tec_spiritualist_cult_knowledge_desc$"
+		policy_option_tec_fanatic_spiritualist_cult_knowledge_desc:0 "The divine drives us to know more, to discover the secrets of this universe.\n\n§EThis policy is focused on §HResearch§!§!\n\n£job_priest£ §YPriests§! increase §Y$tec_loc_research_resources$§! by §G0.5%§!"
 
 		policy_option_tec_spiritualist_cult_machine:0 "Cult of the Holy Machine"
 		policy_option_tec_spiritualist_cult_machine_name:0 "$policy_option_tec_spiritualist_cult_machine$"
