--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -386,17 +386,17 @@
  
 # Ruler Replace Civics
 # ------------------------------------------------------------	§G§!
-
-	# merchant guilds
-
  # Auth
-
 
  # Egal
 	civic_tec_regular_procurators:0 "§G§!Equality Procurators"
 	civic_tec_regular_procurators_desc:0 "['concept_tec_ruler_replace_civic']\n\nThe protection of equality is an imperative that must be preserved, thats why this society assigns the most qualified to ensure everyone has access to the same resources, the same opportunities and the same."
 	civic_tec_regular_procurators_tooltip:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_tec_procurator£ §Y$job_tec_procurator_plural$§!.\n- $job_tec_procurator_effect_desc$\n\n TO DO"
 
+		councilor_civic_tec_regular_procurators:0 "Procurator of Goods"
+		councilor_civic_tec_regular_procurators_female:0 "$councilor_civic_tec_regular_procurators$"
+		councilor_civic_tec_regular_procurators_desc:0 "The $TITLE$ is the main supervisor of proper equal distributions and access to resources."
+		councilor_civic_tec_regular_procurators_custom_modifier_desc:0 "TO DO"
  # Phobe
 
  # Phile
@@ -406,14 +406,29 @@
 	civic_tec_regular_stratocracy_desc:0 "['concept_tec_ruler_replace_civic']\n\nIn Stratocracy the State and the Army are basically and constitutionally the same. Administrative positions are usually occupied by active or honorably discharged military chiefs. "
 	civic_tec_regular_stratocracy_tooltip:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_commandante£ §Y$job_commandante_plural$§!.\n- $job_commandante_effect_desc$\n£mod_country_naval_cap_add£ Naval Capacity from £job_politician£ Administrators: §G+1§!"
 
+		councilor_civic_tec_regular_stratocracy:0 "Master Strategist"
+		councilor_civic_tec_regular_stratocracy_female:0 "$councilor_civic_tec_regular_stratocracy$"
+		councilor_civic_tec_regular_stratocracy_desc:0 "The $TITLE$ is the direct representation of the military order."
+		councilor_civic_tec_regular_stratocracy_custom_modifier_desc:0 "TO DO"
+
  # Pacif - former civic_bureaucracy
 	civic_tec_regular_irenic_bureaucracy:0 "§G§!Irenic Bureaucracy"
 	civic_tec_regular_irenic_bureaucracy_desc:0 "['concept_tec_ruler_replace_civic']\n\nIn this society government is traditionally guided by Iron-willed Bureaucrats - ideal rulers, who possesses intelligence, reliability, and a willingness to live a peaceful and prosperous life, by commanding others."
 	civic_tec_regular_irenic_bureaucracy_tooltip:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_supervisor_bureaucrat£ §Y$job_supervisor_bureaucrat_plural$§!.\n- $job_supervisor_bureaucrat_effect_desc$\n"
 
+		councilor_civic_tec_regular_irenic_bureaucracy:0 "Embodiment of Order"
+		councilor_civic_tec_regular_irenic_bureaucracy_female:0 "$councilor_civic_tec_regular_irenic_bureaucracy$"
+		councilor_civic_tec_regular_irenic_bureaucracy_desc:0 "The $TITLE$ serves as both head bureaucrat and main representative of the government affairs, guiding its subordintes towards max efficiency."
+		councilor_civic_tec_regular_irenic_bureaucracy_custom_modifier_desc:0 "TO DO"
+
 	civic_tec_regular_archivist: "§G§!Archive Curators"
 	civic_tec_regular_archivist_desc:0 "['concept_tec_ruler_replace_civic']\n\nThis society has always been interested in preserving culture and science at all cost, so most of the population works as librarians, curators or archivists and enjoys a a plentiful and peaceful repository of diverse content."
 	civic_tec_regular_archivist_tooltip:2 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_tec_grand_archivist£ §Y$job_tec_grand_archivist_plural$§!.\n- $job_tec_grand_archivist_effect_desc$\n\nAllow the construction of £building£ §YArchives§!, where £job_tec_minor_archivist£ §Y$job_tec_minor_archivist_plural$§! transform £trigger_tec_research£ Research Points into £unity£ Unity\n\n§YResearch Agreement Pacts§! no longer cost £influence£ §YInfluence§! to maintain, and each new one gives a empire modifier.\n\n"
+
+		councilor_civic_tec_regular_archivist:0 "Archlibrarian"
+		councilor_civic_tec_regular_archivist_female:0 "$councilor_civic_tec_regular_archivist$"
+		councilor_civic_tec_regular_archivist_desc:0 "Few things are known of the private or public life of the $TITLE$, but tradition indicate its one of the few individuals who know and have acess to each single archived file, each single ordered database."
+		councilor_civic_tec_regular_archivist_custom_modifier_desc:0 "TO DO"
 
  # Spi
 	civic_exalted_priesthood: "§G§!Exalted Priesthood"
@@ -423,6 +438,11 @@
 	civic_tec_regular_occultist:0 "§G§!Lodge of the Occult"
 	civic_tec_regular_occultist_desc:0 "['concept_tec_ruler_replace_civic']\n['concept_tec_secondary_cult_civic']\n\nCuriosity draw a ruling and occult part of this society from rudimentary beliefs to a full dedication to the discovery of the truth. While most of the society blindly follows creeds and psalms, the truly devotes search, with the help of science, a way to unravel the secrets of the universe and an eternal search to the greatest of all truths, the true origin of their faith."
 	civic_tec_regular_occultist_tooltip:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_tec_grand_occultist£ §Y$job_tec_grand_occultist_plural$§!.\n- $job_tec_grand_occultist_effect_desc$\n\nAllow the construction of £building£ §YLodges§!, planet unique building that provides £job_tec_grand_occultist£ §Y$job_tec_grand_occultist_plural$§! and £job_tec_minor_occultist£ §Y$job_tec_minor_occultist_plural$§! jobs.\n\n"
+
+		councilor_civic_tec_regular_occultist:0 "Keeper of Secrets"
+		councilor_civic_tec_regular_occultist_female:0 "$councilor_civic_tec_regular_occultist$"
+		councilor_civic_tec_regular_occultist_desc:0 "Being part of the most secretive layers of the cult, the $TITLE$ has seen what others can just dream, and knows what others can't even imagine to know."
+		councilor_civic_tec_regular_occultist_custom_modifier_desc:0 "TO DO"
 
  # Mat
 	civic_technocracy:0 "§G§!Technocracy"
@@ -438,6 +458,11 @@
 	civic_tec_regular_science_directorate_desc:0 "['concept_tec_ruler_replace_civic']\n\nAs there is no progress without research, and there is no research without progress, this civilization relies on councils of the wisest and most prepared scientists for administration, advancements and society development, occupying the highest political charges while keeping their Inventiveness and research."
 	civic_tec_regular_science_directorate_tooltip:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_head_researcher£ §Y$job_head_researcher_plural$§!.\n- $job_head_researcher_effect_desc$.\n§YScientists§! start with random §YExpertise§! trait.\n"
 
+		councilor_civic_tec_regular_science_directorate:0 "Senior Science Director"
+		councilor_civic_tec_regular_science_directorate_female:0 "$councilor_civic_tec_regular_science_directorate$"
+		councilor_civic_tec_regular_science_directorate_desc:0 "The $TITLE$ ensures fundamental research is promoted and shared between departments."
+		councilor_civic_tec_regular_science_directorate_custom_modifier_desc:0 "TO DO"
+
  # Coop
 
  # Coomp
@@ -450,6 +475,11 @@
 	civic_tec_regular_inventinkers:0 "§G§!Invent-tinkerers"
 	civic_tec_regular_inventinkers_desc:0 "['concept_tec_ruler_replace_civic']\n\nCulturally, this society has evolved with the guide of expert craftsmen, tinkerers and inventors, who used their knowledge to develop new tools and assets to either overcome, support or help others with true marvels of ingenuity and cunning."
 	civic_tec_tooltip_inventinkers_tooltip:0 "£building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_tec_master_tinker£ §Y$job_tec_master_tinker_plural$§!.\n- $job_tec_master_tinker_effect_desc$\n\n$tec_loc_amenities$ from £job_foundry£ $job_foundry_plural$: §G+1§!"
+
+		councilor_civic_tec_regular_inventinkers:0 "Supreme Tinker"
+		councilor_civic_tec_regular_inventinkers_female:0 "$councilor_civic_tec_regular_inventinkers$"
+		councilor_civic_tec_regular_inventinkers_desc:0 "$TITLE$s are top-of-tier tinkers, chosen by tinkers guilds and the government itself, to oversee the design and creation of new tools and inventions."
+		councilor_civic_tec_regular_inventinkers_custom_modifier_desc:0 "TO DO"
 
  # Elitist
 	civic_aristocratic_elite:0 "§G§!Patrimonial Aristocracy"
@@ -465,6 +495,11 @@
 	# by xamot II "This society believes that a revolutionary vanguard party, mostly recruited from the working class, should lead the political campaign, because it is the only way that the proletariat can successfully achieve the permanent revolution. They are ready and willing to root out any counterrevolutionaries that may seek to undermine the state."
 	civic_tec_regular_socialguards_tooltip:0 "TO DO £building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_tec_procurator£ §Y$job_tec_procurator_plural$§!.\n- $job_tec_procurator_effect_desc$\n\n"
 
+		councilor_civic_tec_regular_socialguards:0 "Protector of Rights"
+		councilor_civic_tec_regular_socialguards_female:0 "$councilor_civic_tec_regular_socialguards$"
+		councilor_civic_tec_regular_socialguards_desc:0 "The $TITLE$ takes charge of ensuring the protection and rights of all the population."
+		councilor_civic_tec_regular_socialguards_custom_modifier_desc:0 "TO DO"
+
  # Egalitarian
 
  # Egalitarian
@@ -478,21 +513,40 @@
 	civic_tec_regular_overseers_desc:0 "['concept_tec_ruler_add_civic']\n\nMonitor, track, control, subdue before anything happens as a social motto, this society is structured on strong authoritarian foundations and near all the population is partially or totally controlled by efficient assigned overseers who act as judge, jury and executioner."
 	civic_tec_regular_overseers_tooltip:0 "TO DO £building£ §YCapital Buildings§! provide additional £job_tec_high_overseer£ §Y$job_tec_high_overseer_plural$§!.\n- $job_tec_high_overseer_effect_desc$\nAEach £job_enforcer£ §Y$job_enforcer_plural$§! boost Slave and Worker £job£ §YOutput§!.\n£unity£ §YInformation Quarantine§! edict has no upkeep.\n\nTO DO"
 
+		councilor_civic_tec_regular_overseers:0 "Empire Judge"
+		councilor_civic_tec_regular_overseers_female:0 "$councilor_civic_tec_regular_overseers$"
+		councilor_civic_tec_regular_overseers_desc:0 "The $TITLE$ is the head of the overseers, the one who dictates and has the last word and action."
+		councilor_civic_tec_regular_overseers_custom_modifier_desc:0 "TO DO"
+
 	civic_tec_regular_inquisitors:0 "§H§!Court of Inquisitors"
 	civic_tec_regular_inquisitors_desc:0 "['concept_tec_ruler_add_civic']\n\nPurity, order and supremacy are the foundation of this society. The values are sought and continually reaffirmed by an elite force of inquisitors, the wardens of the true purpose of this empire, prosecuting any external threat that may harm the integrity of their true purpose and identity."
 	civic_tec_regular_inquisitors_tooltip:0 "£building£ §YCapital Buildings§! provide extra £job_tec_inquisitor£ §Y$job_tec_inquisitor_plural$§!.\n- $job_tec_inquisitor_effect_desc$\n\n£trigger_tec_warning_red£ EFFECT NOT READY.\n\n"
+
+		councilor_civic_tec_regular_inquisitors:0 "High Inquisitor"
+		councilor_civic_tec_regular_inquisitors_female:0 "$councilor_civic_tec_regular_inquisitors$"
+		councilor_civic_tec_regular_inquisitors_desc:0 "The mere presence of the $TITLE$ is a nightmare manifested as reality for all and each dissident and free-thinker."
+		councilor_civic_tec_regular_inquisitors_custom_modifier_desc:0 "TO DO"
 
  # Egal
 	civic_tec_regular_senators:0 "§H§!Senatorial Diligence"
 	civic_tec_regular_senators_desc:0 "['concept_tec_ruler_add_civic']\n\nTO DO."
 	civic_tec_regular_senators_tooltip:0 "TO DO £building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_tec_procurator£ §Y$job_tec_procurator_plural$§!.\n- $job_tec_procurator_effect_desc$\n\n"
 
+		councilor_civic_tec_regular_senators:0 "Main Senator"
+		councilor_civic_tec_regular_senators_female:0 "$councilor_civic_tec_regular_senators$"
+		councilor_civic_tec_regular_senators_desc:0 "The $TITLE$ controls and regulates new and old political rules and progamming."
+		councilor_civic_tec_regular_senators_custom_modifier_desc:0 "TO DO"
  # Phobe
 
  # Phile
 	civic_tec_regular_diplomats:0 "§H§!Diplomatic Chancellery"
 	civic_tec_regular_diplomats_desc:0 "['concept_tec_ruler_add_civic']\n\nA strong will and faith in politics is the basis of this society, assigning expert politics to any diplomatic affair and affirming the power of words is the one that rules over discrepancy, misunderstandings or direct savagery."
 	civic_tec_regular_diplomats_tooltip:0 "£building£ §YCapital Buildings§! provide additional  £job_tec_procurator£ §Y$job_tec_procurator_plural$§!.\n- $job_tec_procurator_effect_desc$\n\nCompletely upgraded £building£ §YCapital Buildings§! will provide £diplo_weight£ §G1§! Envoy.\n\n"
+
+		councilor_civic_tec_regular_diplomats:0 "Diplomatic Weaver"
+		councilor_civic_tec_regular_diplomats_female:0 "$councilor_civic_tec_regular_diplomats$"
+		councilor_civic_tec_regular_diplomats_desc:0 "The $TITLE$ takes charge of the main diplomatic affairs of the empire."
+		councilor_civic_tec_regular_diplomats_custom_modifier_desc:0 "TO DO"
 
  # Mil
 
@@ -506,16 +560,33 @@
 	civic_tec_regular_medical:0 "§H§!A"
 	civic_tec_regular_medical_desc:0 "['concept_tec_ruler_add_civic']\n\nA."
 	civic_tec_regular_medical_tooltip:0 "TO DO £building£ §YCapital Buildings§! replace some £job_politician£ §Y$job_politician$§! Jobs with £job_tec_high_cultivator£ §Y$job_tec_high_medical_plural$§!.\n- $job_tec_high_medical_effect_desc$\nA\n\n"
+
+		councilor_civic_tec_regular_medical:0 "Health Minister"
+		councilor_civic_tec_regular_medical_female:0 "$councilor_civic_tec_regular_medical$"
+		councilor_civic_tec_regular_medical_desc:0 "The $TITLE$ is occupied with the administration of existing medicines and creation of new medical breakthroughs."
+		councilor_civic_tec_regular_medical_custom_modifier_desc:0 "TO DO"
+
  # Coomp
 
  # Eco
 	civic_tec_regular_cultivators:0 "§H§!Eden Cultivators"
 	civic_tec_regular_cultivators_desc:0 "['concept_tec_ruler_add_civic']\n\nSince they developed a culture and structure, this civilization searched ways to use, mold and integrate nature in every architectural and social aspect, developing the intent of creating the most beautiful, plentiful and perfect garden as their solemn purpose."
 	civic_tec_regular_cultivators_tooltip:0 "TO DO £building£ §YCapital Buildings§! provide additional £job_tec_high_cultivator£ §Y$job_tec_high_cultivator_plural$§!.\n- $job_tec_high_cultivator_effect_desc$\nAll Buildings, Starbases, Mining and Research stations have a shared cost of $tec_loc_minerals$ and $tec_loc_food$.\n\n"
+
+		councilor_civic_tec_regular_cultivators:0 "Edenian Planner"
+		councilor_civic_tec_regular_cultivators_female:0 "$councilor_civic_tec_regular_cultivators$"
+		councilor_civic_tec_regular_cultivators_desc:0 "The $TITLE$ creates new perfect architectural plans for beautiful, efficient and nature respectful cities."
+		councilor_civic_tec_regular_cultivators_custom_modifier_desc:0 "TO DO"
+
  # Indu
 	civic_tec_regular_chemical_barons:0 "§H§!Chemical Barony"
 	civic_tec_regular_chemical_barons_desc:0 "['concept_tec_ruler_add_civic']\n\nTO DO."
 	civic_tec_regular_chemical_barons_tooltip:0 "TO DO £building£ §YCapital Buildings§! provide additional £job_tec_chemical_baron£ §Y$job_tec_chemical_baron_plural$§!.\n- $job_tec_checmical_baron_effect_desc$\n\n£building£ §YChemical Compounds§! provide £volatile_motes£ £exotic_gases£ £rare_crystals£ §YStrategic Resource Jobs§! and change the production of $job_tec_chemical_baron_plural$\n£volatile_motes£ £exotic_gases£ £rare_crystals£ §YStrategic Resource Jobs§! boost the production of £job_tec_chemical_baron£ $job_tec_chemical_baron_plural$ by §G2.5%§! each\n\n"
+
+		councilor_civic_tec_regular_chemical_barons:0 "Chemical Duke"
+		councilor_civic_tec_regular_chemical_barons_female:0 "Chemical Duchess"
+		councilor_civic_tec_regular_chemical_barons_desc:0 "The $TITLE$ holds the control of the circle of chemical barons, being an influential figure for the empire."
+		councilor_civic_tec_regular_chemical_barons_custom_modifier_desc:0 "TO DO"
 
  # Elitist
 
