Locs for ai auths and initial node leader upkeeps

--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -32,21 +32,21 @@
 
 councilor_tec_aiauth_development: "Main Development Program"
 councilor_tec_aiauth_development_female: "$councilor_tec_aiauth_development$"
-councilor_tec_aiauth_development_desc: "TODO"
+councilor_tec_aiauth_development_desc: "Filled by an AI Node, the Main Development Program drives research and expansion. Unleashing unparalleled technological advancements, they propel the empire forward through strategic growth and groundbreaking discoveries."
 
 councilor_tec_aiauth_firewall: "Main Firewall Program"
 councilor_tec_aiauth_development_female: "$councilor_tec_aiauth_firewall$"
-councilor_tec_aiauth_firewall_desc: "TODO"
+councilor_tec_aiauth_firewall_desc: "Filled by an AI Node, the Main Firewall Program ensures the empire's defense and internal stability. They fortify borders, develop advanced defensive systems, and maintain the security of their territories. With unwavering vigilance, they safeguard their interests from external threats and ensure the well-being of their empire from within."
 
 # Fake councilor names
 councilor_tec_aiauth_fragment_admiral: "Admiral AI Node"
-councilor_tec_aiauth_fragment_admiral_desc: "TODO"
+councilor_tec_aiauth_fragment_admiral_desc: "Leading our fleet with unparalleled skill, the Admiral AI Node ensures our dominance in space."
 
 councilor_tec_aiauth_fragment_general: "General AI Node"
-councilor_tec_aiauth_fragment_general_desc: "TODO"
+councilor_tec_aiauth_fragment_general_desc: "The General AI Node commands our ground forces with strategic precision, securing victories on planetary surfaces."
 
 councilor_tec_aiauth_fragment_governor: "Governor AI Node"
-councilor_tec_aiauth_fragment_governor_desc: "TODO"
+councilor_tec_aiauth_fragment_governor_desc: "The Governor AI Node oversees governance and development, fostering prosperity on each planet."
 
 councilor_tec_aiauth_fragment_scientist: "Scientist AI Node"
-councilor_tec_aiauth_fragment_scientist_desc: "TODO"
+councilor_tec_aiauth_fragment_scientist_desc: "The Scientist AI Node pioneers research and technological advancements, unraveling the universe's mysteries."
