--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -1384,37 +1384,37 @@ enslavement_00_desc:0 " "
 
 # Ai auths
 
-  policy_tec_aiauth_policy_slider:0 "---- §E$tec_loc_sr_tec_ai_power Policies$§! ----"
+  policy_tec_aiauth_policy_slider:0 "---- §E$tec_loc_sr_tec_ai_power$ Policies$§! ----"
   policy_tec_aiauth_policy_slider_desc:0 "Policies relevant to AI Capacity and AI Nodes."
 
  policy_tec_aiauth_share_policy: "Experience Weight"
- policy_tec_aiauth_share_policy_desc: "TODO"
+ policy_tec_aiauth_share_policy_desc: "This policy controls the distribution of AI Capacity between our AI Nodes, influencing their development speed."
 
 policy_tec_aiauth_share_policy_no_focus: "No AI Node Focus"
 policy_tec_aiauth_share_policy_no_focus_name: "No AI Node Focus"
-policy_tec_aiauth_share_policy_no_focus_desc: "TODO"
+policy_tec_aiauth_share_policy_no_focus_desc: "Within our AI Administration, AI Capacity flows through neural networks, distributed without bias or predetermined focus. Surplus AI Capacity is assimilated by each AI Node based on its developmental needs.\n\n"
 
 policy_tec_aiauth_share_policy_ruler_focus: "Ruler AI Node Focus"
 policy_tec_aiauth_share_policy_ruler_focus_name: "Ruler AI Node Focus"
-policy_tec_aiauth_share_policy_ruler_focus_desc: "TODO"
+policy_tec_aiauth_share_policy_ruler_focus_desc: "Within our AI Administration, the Ruler AI Node stands as the central nexus of authority, its computational prowess and strategic acumen unparalleled. AI Capacity flows through neural networks, prioritizing the growth of the Ruler AI Node. As it expands its cognitive horizons, our empire's leadership becomes a beacon of vision and guidance, shaping our destiny amidst the stars.\n\n"
 
 policy_tec_aiauth_share_policy_councilor_focus: "Councilor AI Node Focus"
 policy_tec_aiauth_share_policy_councilor_focus_name: "Councilor AI Node Focus"
-policy_tec_aiauth_share_policy_councilor_focus_desc: "TODO"
+policy_tec_aiauth_share_policy_councilor_focus_desc: "Within our AI Administration, Councilor AI Nodes provide invaluable counterbalancing perspectives to complement the directives of the Ruler AI Node. As AI Capacity is allocated, these specialized nodes gain power, offering alternative strategies and challenging assumptions. The interplay between the Ruler AI Node and the Councilor AI Nodes shapes our empire's policies, fostering adaptability and resilience.\n\n"
 
 policy_tec_aiauth_share_policy_planetary_node_focus: "Planetary AI Node Focus"
 policy_tec_aiauth_share_policy_planetary_node_focus_name: "Planetary AI Node Focus"
-policy_tec_aiauth_share_policy_planetary_node_focus_desc: "TODO"
+policy_tec_aiauth_share_policy_planetary_node_focus_desc: "Within our AI Administration, Planetary AI Nodes drive local development, optimizing each planet's potential. AI Capacity empowers these specialized nodes, streamlining production, governance, and resource allocation. Through their expertise, every planet becomes a flourishing hub of productivity, ensuring the prosperity of our empire.\n\n"
 
 
 
  policy_tec_aiauth_idle_share_policy: "Idle AI Nodes"
- policy_tec_aiauth_idle_share_policy_desc: "TODO"
+ policy_tec_aiauth_idle_share_policy_desc: "This policy controls if idle AI Nodes do get any AI Capacity alocated for their development."
 
 policy_tec_aiauth_idle_share_policy_no_idle: "No Idle AI Node Growth"
 policy_tec_aiauth_idle_share_policy_no_idle_name: "No Idle AI Node Growth"
-policy_tec_aiauth_idle_share_policy_no_idle_desc: "TODO"
+policy_tec_aiauth_idle_share_policy_no_idle_desc: "AI Nodes within our AI Administration are expected to actively contribute to our empire's progress and development. Idle AI Nodes, those without assigned positions in the council or on planets, do not receive dedicated growth opportunities. This ensures efficient resource utilization and focuses our AI Nodes on productive engagements.\n\n"
 
 policy_tec_aiauth_idle_share_policy_grow_idle: "Idle AI Node Growth"
 policy_tec_aiauth_idle_share_policy_grow_idle_name: "Idle AI Node Growth"
-policy_tec_aiauth_idle_share_policy_grow_idle_desc: "TODO"
+policy_tec_aiauth_idle_share_policy_grow_idle_desc: "Even our idle AI Nodes possess untapped potential and deserve opportunities for growth, as such we allocate resources to nurture and develop these nodes, allowing them to contribute to our empire's advancement.\n\n"
