More small fixes and added government reformation and planetary ai nodes and more missing locs

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1565,13 +1565,13 @@
 # /
 
 # Ai auth
-trait_tec_aiauth_ruler: "Main AI Node"
-trait_tec_aiauth_ruler_desc: "TODO"
+trait_tec_aiauth_ruler: "Ruler AI Node"
+trait_tec_aiauth_ruler_desc: "The Ruler AI Node, a pinnacle of artificial intelligence, assumes the mantle of heading and controlling the state. Endowed with eternal existence and unparalleled computational prowess, it stands as the undying architect of unending progress within our empire."
 
 trait_tec_aiauth_node: "Councilor AI Node"
-trait_tec_aiauth_node_desc: "TODO"
+trait_tec_aiauth_node_desc: "The Councilor AI Node, plays a vital role as a catalyst for diverse perspectives within our AI Administration. Embracing a contrarian approach, it challenges established notions and injects critical dissent into the ruling AI hierarchy. By introducing alternative viewpoints and thought-provoking insights, this Councilor AI Node enriches our decision-making processes, promoting a culture of innovation, adaptability, and resilience."
 
 trait_tec_aiauth_planetary_node: "Planetary AI Node"
-trait_tec_aiauth_planetary_node_desc: "TODO"
+trait_tec_aiauth_planetary_node_desc: "The Planetary AI Node, housed within the $building_tec_planetary_node_center$, diligently controlls and manages the complexities of its assigned planet. Leveraging its computational prowess, the Planetary AI Node optimizes productivity, allocates resources, and ensures the harmonious development of its world."
 
 # /
