--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -3685,7 +3685,6 @@ tec_job_mining_drones_and_reef_drones:0 "$job_mining_drone_plural$ and £tec_ree
 tec_job_technician_drone_and_thermogenerator_drone:0 "$job_technician_drone$ and £tec_thermogenerator_drone£ $job_tec_thermogenerator_drone$"
 tec_job_technician_drones_and_thermogenerator_drones:0 "$job_technician_drone_plural$ and £tec_thermogenerator_drone£ $job_tec_thermogenerator_drone_plural$"
 
-# Eco cats
 
 # Jobs WIP
 
@@ -3766,3 +3765,8 @@ building_tec_proto_capital_desc:0 ""
 
 building_tec_proto_major_capital:0 ""
 building_tec_proto_major_capital_desc:0 ""
+
+# AI AUTH
+
+building_tec_planetary_node_center: "Planetary Node Center"
+building_tec_planetary_node_center_desc: "The Planetary Node Center, a nexus of governance, houses the infrastructure of the Planetary AI Node. With computational power at its core, it coordinates resources and drives optimized production. Guiding the planet's development, it ensures prosperity under the watchful eye of artificial intelligence. A symbol of advancement, it shapes our empire's future with AI and organic ingenuity."
