--- a/localisation/english/zz_evolved_leaders_l_english.yml
+++ b/localisation/english/zz_evolved_leaders_l_english.yml
@@ -121,3 +121,12 @@
 # ------------------------------------------------- Psionic T2
 
  # ---- Gates
+
+
+
+tec_aiauth_ruler: "Main AI Node"
+
+
+tec_aiauth_ruler: "Main AI Node"
+tec_aiauth_planetary_governor: "Planetary AI Node"
+tec_aiauth_planetary_governor_desc: ""
