--- a/localisation/english/zz_evolved_events_lore_l_english.yml
+++ b/localisation/english/zz_evolved_events_lore_l_english.yml
@@ -913,29 +913,29 @@ tec_origin.122.a.tooltip:0 "The location of a suitable system is revealed, colon
 
 # Events here
 
-tec_aiauth:0 "Choose the "
-tec_aiauth_available_programs:0 "Max available programs:0 "
-tec_aiauth_main_bonus:0 "Max available programs: §Y[root.tec_max_aiauth_programs]§!"
-tec_aiauth_used_bonus:0 "Used programs slots: §Y[root.tec_aiauth_used_programs]§!"
-tec_aiauth_main_bonus:0 "Available program slots: §Y[root.tec_aiauth_stored_programs]§!"
-tec_aiauth_main_bonus:0 "Main Programs"
-tec_aiauth_main_bonus:0 "Main Programs are higher Programs that encapsulate the desire and administrative querys of the AI authority. Activation of a Main Program will reduce the amount of protocols available to 1, and each main program consumes 2 program slots."
+# tec_aiauth:0 "Choose the "
+# tec_aiauth_available_programs:0 "Max available programs:0 "
+# tec_aiauth_main_bonus:0 "Max available programs: §Y[root.tec_max_aiauth_programs]§!"
+# tec_aiauth_used_bonus:0 "Used programs slots: §Y[root.tec_aiauth_used_programs]§!"
+# tec_aiauth_main_bonus:0 "Available program slots: §Y[root.tec_aiauth_stored_programs]§!"
+# tec_aiauth_main_bonus:0 "Main Programs"
+# tec_aiauth_main_bonus:0 "Main Programs are higher Programs that encapsulate the desire and administrative querys of the AI authority. Activation of a Main Program will reduce the amount of protocols available to 1, and each main program consumes 2 program slots."
 
-tec_aiauth_main_research:0 "Resear"
-tec_aiauth_main_research_desc:0 "Main Programs"
-tec_aiauth_main_research:0 "Main Programs"
-tec_aiauth_main_research:0 "Main Programs"
-tec_aiauth_main_research:0 "Main Programs"
-tec_aiauth_main_research:0 "Main Programs"
-tec_aiauth_main_research:0 "Main Programs"
-tec_aiauth_main_research:0 "Main Programs"
+# tec_aiauth_main_research:0 "Resear"
+# tec_aiauth_main_research_desc:0 "Main Programs"
+# tec_aiauth_main_research:0 "Main Programs"
+# tec_aiauth_main_research:0 "Main Programs"
+# tec_aiauth_main_research:0 "Main Programs"
+# tec_aiauth_main_research:0 "Main Programs"
+# tec_aiauth_main_research:0 "Main Programs"
+# tec_aiauth_main_research:0 "Main Programs"
 
-tec_aiauth_minor_bonus:0 "Protocols"
-tec_aiauth_minor_bonus_desc:0 "Protocols are lesser and more flexible programs that can supply higher Programs in more quantity. A maximum of 3 Protocol slots are avaible in the absence of a higher active program, otherwise just one will be available for activation. Each protocol consumes 1 program slot."
-#tec_aiauth_max_minor_bonus:0 "Allowed Protocols: §Y[root.tec_allowed_protocols]§!"
+# tec_aiauth_minor_bonus:0 "Protocols"
+# tec_aiauth_minor_bonus_desc:0 "Protocols are lesser and more flexible programs that can supply higher Programs in more quantity. A maximum of 3 Protocol slots are avaible in the absence of a higher active program, otherwise just one will be available for activation. Each protocol consumes 1 program slot."
+# #tec_aiauth_max_minor_bonus:0 "Allowed Protocols: §Y[root.tec_allowed_protocols]§!"
 
-tec_aiauth_error_major_bonus_used:0 "§RERROR : A Main Program is already chosen, disable it allowing others.§!"
-tec_aiauth_error_minor_bonus_used:0 "§RERROR : All available protocols are already used, disable a protocol for allowing other.§!"
+# tec_aiauth_error_major_bonus_used:0 "§RERROR : A Main Program is already chosen, disable it allowing others.§!"
+# tec_aiauth_error_minor_bonus_used:0 "§RERROR : All available protocols are already used, disable a protocol for allowing other.§!"
 
 
 
@@ -944,65 +944,65 @@ tec_aiauth_error_minor_bonus_used:0 "§RERROR : All available protocols are alre
 # \nMax used programs:§Y[root.tec_max_aiauth_programs]§!\nPrograms used:§Y[root.tec_aiauth_used_programs]§!
 
 
- tec_aiauth.100.name:0 "AI Customization"
- tec_aiauth.100.desc:0 "Stored £sr_tec_ai_power£:§Y[root.tec_aiauth_program_stored]§!\nProgram cost £sr_tec_ai_power£:§R[root.tec_aiauth_program_cost]§!\n\nSelect what you want to add to the main ai core"
- tec_aiauth.100.main:0 "Select £sr_tec_ai_power£ §YMain Program§!"
- tec_aiauth.100.main.tooltip:0 "Main Programs are higher Programs that encapsulate the desire and administrative querys of the AI authority. Activation of a Main Program will reduce the amount of protocols available to 1, and each main program consumes 2 program slots."
- tec_aiauth.100.minor:0 "Select £sr_tec_ai_power£ §YProtocol§!"
- tec_aiauth.100.minor.tooltip:0 "Protocols are lesser and more flexible programs that can supply higher Programs in more quantity. A maximum of 3 Protocol slots are avaible in the absence of a higher active program, otherwise just one will be available for activation. Each protocol consumes 1 program slot."
- tec_aiauth.100.levelup:0 "Level-UP £sr_tec_ai_power£ §YAI§!"
- tec_aiauth.100.levelup.tooltip:0 "Upgrades the AI ruler with an extra level. AI rulers need to invest a program slot of £sr_tec_ai_power£ §Y$sr_tec_ai_power$§! in order to level up, as they don't gain experience passively."
- tec_aiauth.100.exit:0 "Exit"
- tec_aiauth.100.exit.tooltip:0 "Closes the Customization Window"
- tec_aiauth.110.name:0 "£sr_tec_ai_power£ §YMain Programs§!"
- tec_aiauth.110.desc:0 "Stored £sr_tec_ai_power£:§Y[root.tec_aiauth_program_stored]§!\nProgram cost £sr_tec_ai_power£:§R[root.tec_aiauth_program_cost]§!\n\n$tec_aiauth.100.main.tooltip$\nAvailable programs will be toggle-able on demand, with a cost associated when they are activated and completely free of £sr_tec_ai_power£ $sr_tec_ai_power$ cost when deactivated."
- tec_aiauth.110.back:0 "Back to the main menu"
- tec_aiauth.110.back.tooltip:0 "Returns to the selection screen"
- tec_aiauth.110.research_on:0 "$leader_trait_aiauth_ruler_research_program$"
- tec_aiauth.110.research_on.tooltip:0 "(WIP) All Research from researchers +1\nEnacting this program cost £sr_tec_ai_power£ §R[root.tec_aiauth_program_cost]§!"
- tec_aiauth.110.research_off:0 "Deactivate $leader_trait_aiauth_ruler_research_program$"
- tec_aiauth.110.research_off.tooltip:0 "Deactivates this program at no cost"
- tec_aiauth.110.research_unav:0 "$leader_trait_aiauth_ruler_research_program$ Unavailable"
- tec_aiauth.110.research_unav.tooltip:0 "This current program is unavailable due to lack of enough £sr_tec_ai_power£ $sr_tec_ai_power$ (£sr_tec_ai_power£ §Y[root.tec_aiauth_program_stored]§!/§Y[root.tec_aiauth_program_cost]§!), lacking the necessary program slots (§Y[root.tec_aiauth_program_slots]§!/§Y2§!) or having another program active."
- tec_aiauth.110.industrial_on:0 "$leader_trait_aiauth_ruler_industrial_program$"
- tec_aiauth.110.industrial_on.tooltip:0 "(WIP) +0.5 Alloys and Consumer goods by Metallurgists and Artisans\nEnacting this program cost £sr_tec_ai_power£ §R[root.tec_aiauth_program_cost]§!"
- tec_aiauth.110.industrial_off:0 "Deactivate $leader_trait_aiauth_ruler_industrial_program$"
- tec_aiauth.110.industrial_off.tooltip:0 "Deactivates this program at no cost"
- tec_aiauth.110.industrial_unav:0 "$tec_aiauth.110.research_unav$"
- tec_aiauth.110.industrial_unav.tooltip:0 "$tec_aiauth.110.research_unav.tooltip$"
+#  tec_aiauth.100.name:0 "AI Customization"
+#  tec_aiauth.100.desc:0 "Stored £sr_tec_ai_power£:§Y[root.tec_aiauth_program_stored]§!\nProgram cost £sr_tec_ai_power£:§R[root.tec_aiauth_program_cost]§!\n\nSelect what you want to add to the main ai core"
+#  tec_aiauth.100.main:0 "Select £sr_tec_ai_power£ §YMain Program§!"
+#  tec_aiauth.100.main.tooltip:0 "Main Programs are higher Programs that encapsulate the desire and administrative querys of the AI authority. Activation of a Main Program will reduce the amount of protocols available to 1, and each main program consumes 2 program slots."
+#  tec_aiauth.100.minor:0 "Select £sr_tec_ai_power£ §YProtocol§!"
+#  tec_aiauth.100.minor.tooltip:0 "Protocols are lesser and more flexible programs that can supply higher Programs in more quantity. A maximum of 3 Protocol slots are avaible in the absence of a higher active program, otherwise just one will be available for activation. Each protocol consumes 1 program slot."
+#  tec_aiauth.100.levelup:0 "Level-UP £sr_tec_ai_power£ §YAI§!"
+#  tec_aiauth.100.levelup.tooltip:0 "Upgrades the AI ruler with an extra level. AI rulers need to invest a program slot of £sr_tec_ai_power£ §Y$sr_tec_ai_power$§! in order to level up, as they don't gain experience passively."
+#  tec_aiauth.100.exit:0 "Exit"
+#  tec_aiauth.100.exit.tooltip:0 "Closes the Customization Window"
+#  tec_aiauth.110.name:0 "£sr_tec_ai_power£ §YMain Programs§!"
+#  tec_aiauth.110.desc:0 "Stored £sr_tec_ai_power£:§Y[root.tec_aiauth_program_stored]§!\nProgram cost £sr_tec_ai_power£:§R[root.tec_aiauth_program_cost]§!\n\n$tec_aiauth.100.main.tooltip$\nAvailable programs will be toggle-able on demand, with a cost associated when they are activated and completely free of £sr_tec_ai_power£ $sr_tec_ai_power$ cost when deactivated."
+#  tec_aiauth.110.back:0 "Back to the main menu"
+#  tec_aiauth.110.back.tooltip:0 "Returns to the selection screen"
+#  tec_aiauth.110.research_on:0 "$leader_trait_aiauth_ruler_research_program$"
+#  tec_aiauth.110.research_on.tooltip:0 "(WIP) All Research from researchers +1\nEnacting this program cost £sr_tec_ai_power£ §R[root.tec_aiauth_program_cost]§!"
+#  tec_aiauth.110.research_off:0 "Deactivate $leader_trait_aiauth_ruler_research_program$"
+#  tec_aiauth.110.research_off.tooltip:0 "Deactivates this program at no cost"
+#  tec_aiauth.110.research_unav:0 "$leader_trait_aiauth_ruler_research_program$ Unavailable"
+#  tec_aiauth.110.research_unav.tooltip:0 "This current program is unavailable due to lack of enough £sr_tec_ai_power£ $sr_tec_ai_power$ (£sr_tec_ai_power£ §Y[root.tec_aiauth_program_stored]§!/§Y[root.tec_aiauth_program_cost]§!), lacking the necessary program slots (§Y[root.tec_aiauth_program_slots]§!/§Y2§!) or having another program active."
+#  tec_aiauth.110.industrial_on:0 "$leader_trait_aiauth_ruler_industrial_program$"
+#  tec_aiauth.110.industrial_on.tooltip:0 "(WIP) +0.5 Alloys and Consumer goods by Metallurgists and Artisans\nEnacting this program cost £sr_tec_ai_power£ §R[root.tec_aiauth_program_cost]§!"
+#  tec_aiauth.110.industrial_off:0 "Deactivate $leader_trait_aiauth_ruler_industrial_program$"
+#  tec_aiauth.110.industrial_off.tooltip:0 "Deactivates this program at no cost"
+#  tec_aiauth.110.industrial_unav:0 "$tec_aiauth.110.research_unav$"
+#  tec_aiauth.110.industrial_unav.tooltip:0 "$tec_aiauth.110.research_unav.tooltip$"
 
- tec_aiauth.110.unity_on:0 "$leader_trait_aiauth_ruler_unity_program$"
- tec_aiauth.110.unity_on.tooltip:0 "(WIP) +1 unity from rulers, +0.5 from administrators.\nEnacting this program cost £sr_tec_ai_power£ §R[root.tec_aiauth_program_cost]§!"
- tec_aiauth.110.unity_off:0 "Deactivate $leader_trait_aiauth_ruler_unity_program$"
- tec_aiauth.110.unity_off.tooltip:0 "Deactivates this program at no cost"
- tec_aiauth.110.unity_unav:0 "$tec_aiauth.110.research_unav$"
- tec_aiauth.110.unity_unav.tooltip:0 "$tec_aiauth.110.research_unav.tooltip$"
- tec_aiauth.120.name:0 "£sr_tec_ai_power£ §YProtocols§!"
- tec_aiauth.120.desc:0 "Stored £sr_tec_ai_power£:§Y[root.tec_aiauth_program_stored]§!\nProgram cost £sr_tec_ai_power£:§R[root.tec_aiauth_program_cost]§!\n\n$tec_aiauth.100.minor.tooltip$\nAvailable protocols will be toggle-able on demand, with a cost associated when they are activated and completely free of £sr_tec_ai_power£ $sr_tec_ai_power$ cost when deactivated."
- tec_aiauth.120.caring_on:0 "$leader_trait_aiauth_ruler_caring_protocols$"
- tec_aiauth.120.caring_on.tooltip:0 "(WIP) -10% amenities usage from pops.\nEnacting this program cost £sr_tec_ai_power£ §R[root.tec_aiauth_program_cost]§!"
- tec_aiauth.120.caring_off:0 "Deactivate $leader_trait_aiauth_ruler_caring_protocols$"
- tec_aiauth.120.caring_off.tooltip:0 "Deactivates this protocol at no cost"
- tec_aiauth.120.caring_unav:0 "$leader_trait_aiauth_ruler_caring_protocols$"
- tec_aiauth.120.caring_unav.tooltip:0 "This current protocol is unavailable due to lack of enough £sr_tec_ai_power£ $sr_tec_ai_power$ (£sr_tec_ai_power£ §Y[root.tec_aiauth_program_stored]§!/§Y[root.tec_aiauth_program_cost]§!), lacking the necessary program slots (§Y[root.tec_aiauth_program_slots]§!/§Y2§!) or having either other 3 protocols or a protocol and a main program active."
- tec_aiauth.120.monitoring_on:0 "$leader_trait_aiauth_ruler_monitoring_protocols$"
- tec_aiauth.120.monitoring_on.tooltip:0 "(WIP) -10% empire sprawl form pops.\nEnacting this program cost £sr_tec_ai_power£ §R[root.tec_aiauth_program_cost]§!"
- tec_aiauth.120.monitoring_off:0 "Deactivate $leader_trait_aiauth_ruler_monitoring_protocols$"
- tec_aiauth.120.monitoring_off.tooltip:0 "Deactivates this protocol at no cost"
- tec_aiauth.120.monitoring_unav:0 "$tec_aiauth.120.caring_unav$"
- tec_aiauth.120.monitoring_unav.tooltip:0 "$tec_aiauth.120.caring_unav.tooltip$"
- tec_aiauth.120.development_on:0 "$leader_trait_aiauth_ruler_development_protocols$"
- tec_aiauth.120.development_on.tooltip:0 "(WIP) +1 Building slot for every planet.\nEnacting this program cost £sr_tec_ai_power£ §R[root.tec_aiauth_program_cost]§!"
- tec_aiauth.120.development_off:0 "Deactivate $tec_aiauth.120.caring_unav.tooltip$"
- tec_aiauth.120.development_off.tooltip:0 "Deactivates this protocol at no cost"
- tec_aiauth.120.development_unav:0 "$tec_aiauth.120.caring_unav$"
- tec_aiauth.120.development_unav.tooltip:0 "$tec_aiauth.120.caring_unav.tooltip$"
- tec_aiauth.120.compliance_on:0 "$leader_trait_aiauth_ruler_compliance_protocols$"
- tec_aiauth.120.compliance_on.tooltip:0 "(WIP) +15% Empire Ethic attraction.\nEnacting this program cost £sr_tec_ai_power£ §R[root.tec_aiauth_program_cost]§!"
- tec_aiauth.120.compliance_off:0 "Deactivate $leader_trait_aiauth_ruler_compliance_protocols$"
- tec_aiauth.120.compliance_off.tooltip:0 "Deactivates this protocol at no cost"
- tec_aiauth.120.compliance_unav:0 "$tec_aiauth.120.caring_unav$"
- tec_aiauth.120.compliance_unav.tooltip:0 "$tec_aiauth.120.caring_unav.tooltip$"
+#  tec_aiauth.110.unity_on:0 "$leader_trait_aiauth_ruler_unity_program$"
+#  tec_aiauth.110.unity_on.tooltip:0 "(WIP) +1 unity from rulers, +0.5 from administrators.\nEnacting this program cost £sr_tec_ai_power£ §R[root.tec_aiauth_program_cost]§!"
+#  tec_aiauth.110.unity_off:0 "Deactivate $leader_trait_aiauth_ruler_unity_program$"
+#  tec_aiauth.110.unity_off.tooltip:0 "Deactivates this program at no cost"
+#  tec_aiauth.110.unity_unav:0 "$tec_aiauth.110.research_unav$"
+#  tec_aiauth.110.unity_unav.tooltip:0 "$tec_aiauth.110.research_unav.tooltip$"
+#  tec_aiauth.120.name:0 "£sr_tec_ai_power£ §YProtocols§!"
+#  tec_aiauth.120.desc:0 "Stored £sr_tec_ai_power£:§Y[root.tec_aiauth_program_stored]§!\nProgram cost £sr_tec_ai_power£:§R[root.tec_aiauth_program_cost]§!\n\n$tec_aiauth.100.minor.tooltip$\nAvailable protocols will be toggle-able on demand, with a cost associated when they are activated and completely free of £sr_tec_ai_power£ $sr_tec_ai_power$ cost when deactivated."
+#  tec_aiauth.120.caring_on:0 "$leader_trait_aiauth_ruler_caring_protocols$"
+#  tec_aiauth.120.caring_on.tooltip:0 "(WIP) -10% amenities usage from pops.\nEnacting this program cost £sr_tec_ai_power£ §R[root.tec_aiauth_program_cost]§!"
+#  tec_aiauth.120.caring_off:0 "Deactivate $leader_trait_aiauth_ruler_caring_protocols$"
+#  tec_aiauth.120.caring_off.tooltip:0 "Deactivates this protocol at no cost"
+#  tec_aiauth.120.caring_unav:0 "$leader_trait_aiauth_ruler_caring_protocols$"
+#  tec_aiauth.120.caring_unav.tooltip:0 "This current protocol is unavailable due to lack of enough £sr_tec_ai_power£ $sr_tec_ai_power$ (£sr_tec_ai_power£ §Y[root.tec_aiauth_program_stored]§!/§Y[root.tec_aiauth_program_cost]§!), lacking the necessary program slots (§Y[root.tec_aiauth_program_slots]§!/§Y2§!) or having either other 3 protocols or a protocol and a main program active."
+#  tec_aiauth.120.monitoring_on:0 "$leader_trait_aiauth_ruler_monitoring_protocols$"
+#  tec_aiauth.120.monitoring_on.tooltip:0 "(WIP) -10% empire sprawl form pops.\nEnacting this program cost £sr_tec_ai_power£ §R[root.tec_aiauth_program_cost]§!"
+#  tec_aiauth.120.monitoring_off:0 "Deactivate $leader_trait_aiauth_ruler_monitoring_protocols$"
+#  tec_aiauth.120.monitoring_off.tooltip:0 "Deactivates this protocol at no cost"
+#  tec_aiauth.120.monitoring_unav:0 "$tec_aiauth.120.caring_unav$"
+#  tec_aiauth.120.monitoring_unav.tooltip:0 "$tec_aiauth.120.caring_unav.tooltip$"
+#  tec_aiauth.120.development_on:0 "$leader_trait_aiauth_ruler_development_protocols$"
+#  tec_aiauth.120.development_on.tooltip:0 "(WIP) +1 Building slot for every planet.\nEnacting this program cost £sr_tec_ai_power£ §R[root.tec_aiauth_program_cost]§!"
+#  tec_aiauth.120.development_off:0 "Deactivate $tec_aiauth.120.caring_unav.tooltip$"
+#  tec_aiauth.120.development_off.tooltip:0 "Deactivates this protocol at no cost"
+#  tec_aiauth.120.development_unav:0 "$tec_aiauth.120.caring_unav$"
+#  tec_aiauth.120.development_unav.tooltip:0 "$tec_aiauth.120.caring_unav.tooltip$"
+#  tec_aiauth.120.compliance_on:0 "$leader_trait_aiauth_ruler_compliance_protocols$"
+#  tec_aiauth.120.compliance_on.tooltip:0 "(WIP) +15% Empire Ethic attraction.\nEnacting this program cost £sr_tec_ai_power£ §R[root.tec_aiauth_program_cost]§!"
+#  tec_aiauth.120.compliance_off:0 "Deactivate $leader_trait_aiauth_ruler_compliance_protocols$"
+#  tec_aiauth.120.compliance_off.tooltip:0 "Deactivates this protocol at no cost"
+#  tec_aiauth.120.compliance_unav:0 "$tec_aiauth.120.caring_unav$"
+#  tec_aiauth.120.compliance_unav.tooltip:0 "$tec_aiauth.120.caring_unav.tooltip$"
 
 # Faction events
 factions.1.desc.prosperity:1 "Their members lobby for a national focus on social and economic prosperity, and stability through peaceful means."
