some loc changes + civic changes

--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -48,7 +48,8 @@
 	tec_loc_engineering:0 "£engineering£ §Y$engineering_research$§!"
 	tec_loc_society:0 "£society£ §Y$society_research$§!"
 	tec_loc_physics:0 "£physics£ §Y$physics_research$§!"
-	tec_loc_research_resources:0 "£trigger_tec_research£ §YResearch§!" 
+	tec_loc_research_resources:0 "£trigger_tec_research£ §YResearch§!"
+	tec_loc_research_speed:0 "£job_researcher£ §YResearch Speed§!"
 
 	tec_loc_rare_crystals:0 "£rare_crystals£ §Y$rare_crystals$§!"
 	tec_loc_exotic_gases:0 "£exotic_gases£ §Y$exotic_gases$§!"
