--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -798,27 +798,27 @@
  # /
 	civic_tec_regular_research_council:0 "§M§!Research Council"
 	civic_tec_regular_research_council_desc:0 "['concept_tec_leader_civic']\n\nThe government is strongly advised and monitored by an assembly of the most respectful and renowned empire's Scientists, working on pair with the authority without directly interfering."
-	civic_tec_regular_research_council_tooltip:0 "Active employed £scientist£ §YScientists§! have no §Y$tec_loc_unity$§! Upkeep.\nThe empire £scientist£ §Y$councilor_research$§! produce §Y$tec_loc_research_resources$§! based on the number of §HResearched Technologies§! of the empire, multiplied by the £council£ §HCouncilor level§!\n§HOligarchic Empires§!: Leader production is amplified for by a §G25%§!\n\n"
+	civic_tec_regular_research_council_tooltip:0 "Active employed £scientist£ §YScientists§! have no §Y$tec_loc_unity$§! Upkeep.\nThe empire £scientist£ §Y$councilor_research$§! produce §Y$tec_loc_research_resources$§! based on the number of §HResearched Technologies§! of the empire, multiplied by the £council£ §HCouncilor level§!\n\n§HOligarchic Empires§!: §ELeader production is amplified by §G25%§!§!\n"
 	#old_civic_tec_regular_research_council_tooltip:0 "Active employed §YScientists§! have no §Y$tec_loc_unity$§! Upkeep.\n§YMain Scientists§!, assigned to research technologies, produce §Y$tec_loc_research_resources$§! of its field based on the number of §HResearched Technologies§! of the empire, multiplied by the §HLeader level§! and additionally increased for §YOligarchic§! empires.\n\n"
 
 	civic_tec_regular_scientific_belief:0 "§M§!Factual Belief"
 	civic_tec_regular_scientific_belief_desc:0 "['concept_tec_leader_civic']\n\nThere isn't a stronger motivator to go forward than the constant doubt and discovery lying ahead, the secrets needing solutions; as such, we move forward believing we can really reach them, we can really discover them; we must trust, and believe, in the artificers of such discoveries."
-	civic_tec_regular_scientific_belief_tooltip:0 "Active employed £scientist£ §YScientists§! have no §Y$tec_loc_unity$§! Upkeep.\nThe empire £scientist£ §Y$councilor_research$§! produce £unity£ §!Unity§! based on the number of §HResearched Technologies§! of the empire, multiplied by the £council£ §HCouncilor level§!\n£building£ §HResearch§! Labs increase §YMaterialist ethic Attraction§! on the planet by §G5%§! per level.\n§HOligarchic Empires§!: Leader production is amplified for by a §G25%§!\n\n"
+	civic_tec_regular_scientific_belief_tooltip:0 "Active employed £scientist£ §YScientists§! have no §Y$tec_loc_unity$§! Upkeep.\nThe empire £scientist£ §Y$councilor_research$§! produce §Y$tec_loc_unity$§! based on the number of §HResearched Technologies§! of the empire, multiplied by the £council£ §HCouncilor level§!\n£building£ §HResearch§! Labs increase §YMaterialist ethic Attraction§! on the planet by §G5%§! per level.\n\n§HOligarchic Empires§!: §ELeader production is amplified by §G25%§!§!\n"
 
  # former civic_divine_council
 	civic_tec_regular_divine_circle:0 "§M§!Divine Circle"
 	civic_tec_regular_divine_circle_desc:0 "['concept_tec_leader_civic']\n\nThe government is supervised by a council of the empire's oldest, wisest and most influential spiritual Leaders."
-	civic_tec_regular_divine_circle_tooltip:0 "Active employed £governor£ §YGovernors§! have no §Y$tec_loc_unity$§! Upkeep and produce §G3§! §Y$tec_loc_unity$§! per level.\n§HOligarchic Empires§!: Leader production is amplified for by a §G25%§!\n\n"
+	civic_tec_regular_divine_circle_tooltip:0 "Active employed £governor£ §YGovernors§! have no §Y$tec_loc_unity$§! Upkeep and produce §G3§! §Y$tec_loc_unity$§! per level.\n\n§HOligarchic Empires§!: §ELeader production is amplified by §G25%§!§!\n"
 
  # former civic_military_junta
 	civic_tec_regular_military_council:0 "§M§!Military Council"
 	civic_tec_regular_military_council_desc:0 "['concept_tec_leader_civic']\n\nThe government is dominated by a coalition of the most powerful War Chiefs. "
-	civic_tec_regular_military_council_tooltip:0 "Active employed £admiral£ §YAdmirals§! and £general£ §YGenerals§! have no §Y$tec_loc_unity$§! Upkeep.\nActive employed Admirals produce §Y$tec_loc_unity$§! based on the §HNaval Capacity§! of the fleet are assigned, multiplied by the §HLeader level§!\n§HOligarchic Empires§!: Leader production is amplified for by a §G25%§!\n\n"
+	civic_tec_regular_military_council_tooltip:0 "Active employed £admiral£ §YAdmirals§! and £general£ §YGenerals§! have no §Y$tec_loc_unity$§! Upkeep.\nActive employed Admirals produce §Y$tec_loc_unity$§! based on the §HNaval Capacity§! of the fleet are assigned, multiplied by the §HLeader level§!\n\n§HOligarchic Empires§!: §ELeader production is amplified by §G25%§!§!\n"
 
  # former civic_executive_committee
 	civic_tec_regular_executive_committee: "§M§!Executive Committee"
 	civic_tec_regular_executive_committee_desc: "['concept_tec_leader_civic']\n\nThis government is dominated by a committee of the Empire's most skillful bureaucrats and administrators."
-	civic_tec_regular_executive_committee_tooltip:0 "Active employed £governor£ §YGovernors§! have no §Y$tec_loc_unity$§! Upkeep and produce §G3§! §Y$tec_loc_unity$§! per level.\n§HOligarchic Empires§!: Leader production is amplified for by a §G25%§!\n\n$tec_loc_amenities$ from £job_politician£ Administrators: §G+2§!"
+	civic_tec_regular_executive_committee_tooltip:0 "Active employed £governor£ §YGovernors§! have no §Y$tec_loc_unity$§! Upkeep and produce §G3§! §Y$tec_loc_unity$§! per level.\n\n§HOligarchic Empires§!: §ELeader production is amplified by §G25%§!§!\n$tec_loc_amenities$ from £job_politician£ Administrators: §G+2§!"
 
  # former civic_genetic_aristocracy
 	civic_tec_regular_genetic_ascendancy:0 "§M§!Genetic Ascendancy"
@@ -933,7 +933,7 @@
 
 	civic_crafters:0 "§P§!Masterful Crafters"
 	civic_crafters_desc:0 "['concept_tec_job_alteration_civic']\n\nA penchant for meticulous crafting lies at the heart of this society. Deft appendages and keen sensory organs aid them in creating truly wondrous treasures even in the most basic of trades."
-	civic_crafters_tooltip:0 "['concept_tec_job_artisan_plural_icon'] are replaced with ['concept_tec_job_artificer_plural_icon'].\nEvery §Y3§! §HIndustrial Districts§! grant §G1§! £building£ §YBuilding Slot§! on regular planets.\n\n§HVoid-Dweller empires benefits from this effect on Habitats.§!"
+	civic_crafters_tooltip:0 "['concept_tec_job_artisan_plural_icon'] are replaced with ['concept_tec_job_artificer_plural_icon'].\nEvery §Y3§! §HIndustrial Districts§! grant §G1§! £building£ §YBuilding Slot§! on regular planets.\n\n§HVoid Dweller Empires§!: §EThis effect is applied on §HHabitats§!§!\n"
  # /
 
 	civic_tec_regular_merchants:0 "§P§!Market Representatives"
@@ -1452,7 +1452,7 @@
 
 	civic_tec_corporate_flagshipbureau:0 "Flagship Representatives"
 	civic_tec_corporate_flagshipbureau_desc:0 "Presentation and appeal is a big factor in business, and this Megacorp takes this to the maximum value, creating several flagship institutions that serve as attractive centers of commerce and corporate operations."
-	civic_tec_corporate_flagshipbureau_tooltip:0 "Active employed £governor£ §YGovernors§! have no §Y$tec_loc_unity$§! Upkeep and produce §Y+3§! §Y$tec_loc_unity$§! multiplied by the §HLeader level§! and additionally increased for §YRegular Corporate§! empires.\nAllows the construction of up to §G5§! £building£ §YFlagship§! buildings across the empire, providing extra jobs and £trade_value£ §Y$TRADE_VALUE$§!.\n\n"
+	civic_tec_corporate_flagshipbureau_tooltip:0 "Active employed £governor£ §YGovernors§! have no §Y$tec_loc_unity$§! Upkeep and produce §Y+3§! §Y$tec_loc_unity$§! multiplied by the §HLeader level§!.\nAllows the construction of up to §G5§! £building£ §YFlagship§! buildings across the empire, providing extra jobs and £trade_value£ §Y$TRADE_VALUE$§!.\n\n"
 # /
 
 # Megacorp Feature Civics
@@ -1621,7 +1621,7 @@
 
 	civic_tec_ai_cybercops:0 "Automatic Enforcement"
 	civic_tec_ai_cybercops_desc:0 "To do"
-	civic_tec_ai_cybercops_tooltip:0 "Replace precinct houses with Sentinel Depots, which are automated and efficiently reduce crime without the need of jobs.\nAfter the empire obtains the robotic workers technology, Sentinel Depots wil provide Cyber-Cop jobs, enhanced enforces which also provide processing capacity, but are only available to cybernetic units of any type for employment.\n\nAI Authority Empires: Cyber-Cop also provide extra AI capacity.\n\n"
+	civic_tec_ai_cybercops_tooltip:0 "Replace precinct houses with Sentinel Depots, which are automated and efficiently reduce crime without the need of jobs.\nAfter the empire obtains the robotic workers technology, Sentinel Depots wil provide Cyber-Cop jobs, enhanced enforces which also provide processing capacity, but are only available to cybernetic units of any type for employment.\n\n§HAI Authority Empires§!: §ECyber-Cop also provide extra AI capacity§!.\n"
 
 	civic_tec_ai_research:0 "Inventive Singularity"
 	civic_tec_ai_research_desc:0 "To do"
@@ -1698,7 +1698,7 @@
 
 	civic_tec_hive_anaxiomatic:0 "Anaxiomatic Transference"
 	civic_tec_hive_anaxiomatic_desc:0 "By doing reiterative and complete revisions of the very foundation of the creation of autonomous drones, specially the ones dedicated to innovation and non linear thought, this collective ellaborated a way of making them more conscious and self-aware rewards with more creative and asymetric ways of identifying and transfering knowledge, at a great cost however, as physical and mental impact is greatly increased."
-	civic_tec_hive_anaxiomatic_tooltip:0 "Active employed £scientist£ §YScientists§! have no §Y$tec_loc_unity$§! Upkeep.\nThe empire §Y$councilor_gestalt_scientist_with_icon$§! produce §Y$tec_loc_research_resources$§! and §Y$tec_loc_unity$§! based on the number of §HResearched Technologies§! of the empire, multiplied by the £council£ §HNode level§!.\n§HUber-Autonomous Drone Empires§!: Uber-Autonomous Drones leaders replacing the node position inherit this effect\n\n"
+	civic_tec_hive_anaxiomatic_tooltip:0 "Active employed £scientist£ §YScientists§! have no §Y$tec_loc_unity$§! Upkeep.\nThe empire §Y$councilor_gestalt_scientist_with_icon$§! produce §Y$tec_loc_research_resources$§! and §Y$tec_loc_unity$§! based on the number of §HResearched Technologies§! of the empire, multiplied by the £council£ §HNode level§!.\n\n§HUber-Autonomous Drone Empires§!: §EUber-Autonomous Drones leaders replacing the node position §Hinherit§! this effect§!\n"
 
 
 	civic_tec_hive_myoneural:0 "Myoneural Coherence"
@@ -1882,7 +1882,7 @@
  # --------------- Cluster Civics
 	civic_tec_machine_performance_cluster:0 "Performance Clusters"
 	civic_tec_machine_performance_cluster_desc:0 "['concept_tec_cluster_civic']\n\nOriginally designed for improving production, this gestalt consciousness has the constant desire and priority on self-improvement and fabrication boosting, making specifically designed drones that manifest, and control it, at a planetary scale."
-	civic_tec_machine_performance_cluster_tooltip:0 "£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_prime_performance_drone£ §Y$job_tec_prime_performance_drone_plural$§!.\n£job_coordinator£ §YCoordinator§! drones will provide §G+2§! extra £mod_country_edict_fund_add£ §YEdict Fund§!\n\n§HRogue servitors§!: £job_bio_trophy£ §YBio-trophies§! provide §G+2§! £mod_country_edict_fund_add£ §YEdict Fund§!."
+	civic_tec_machine_performance_cluster_tooltip:0 "£building£ §YCapital Buildings§! replace their £job_tec_prime_drone£ §Y$job_tec_prime_drone_plural$§! Jobs with £job_tec_prime_performance_drone£ §Y$job_tec_prime_performance_drone_plural$§!.\n£job_coordinator£ §YCoordinator§! drones will provide §G+2§! extra £mod_country_edict_fund_add£ §YEdict Fund§!\n\n§HRogue servitor Empires§!: §E£job_bio_trophy£ §HBio-trophies§! provide §G+2§! £mod_country_edict_fund_add£ §YEdict Fund§!§!\n"
 
 	# Research - Hypercluster
 	civic_tec_machine_research_cluster:0 "Innovation Clusters"
@@ -2041,7 +2041,7 @@
  # Trade
 	civic_tec_machine_traders:0 "Trading Software"
 	civic_tec_machine_traders_desc:0 "A whole era ago, the former creators of this Machine Intelligence designed it as a way to improve commerce and business, earning the maximum profit possible via digitalization and crypto-trade creation at the cost of a increasing energetic demand and planetary degradation. Now, after recovering from the economic, social, and ecological debacle organic greed caused, this AI seeks new and more efficient ways to generate, trade and exchange the most valuable resource: Credits."
-	civic_tec_machine_traders_tooltip:0 "This Machine Empire is able to create and collect £trade_value£ §Y$TRADE_VALUE$§!, and establish §YCommercial Pacts§! with regular empires.\n\n§YAnchorage§! modules receive §Y$tec_loc_trade_value$§! from §YOffworld Trading Company§!.\n\nIf combined with Embedded Cooperation civic, establishing a §YBranch office§! requires a §YCommercial pact§!, if done on a planet owned by a non-gestalt empire; If combined with Rogue Servitor civic, each £job_bio_trophy£ $job_bio_trophy_plural$ produce additional §Y$tec_loc_trade_value$§!.\n\n§HBiotrophies§! cared by §HRogue Servitor§! empires will generate additional §Y$tec_loc_trade_value$§! based on their £happiness£ §YHappiness§!."
+	civic_tec_machine_traders_tooltip:0 "This Machine Empire is able to create and collect £trade_value£ §Y$TRADE_VALUE$§!, and establish §YCommercial Pacts§! with regular empires.\n\n§YAnchorage§! modules receive §Y$tec_loc_trade_value$§! from §YOffworld Trading Company§!.\n\nIf combined with Embedded Cooperation civic, establishing a §YBranch office§! requires a §YCommercial pact§!, if done on a planet owned by a non-gestalt empire; If combined with Rogue Servitor civic, each £job_bio_trophy£ $job_bio_trophy_plural$ produce additional §Y$tec_loc_trade_value$§!.\n\n§HRogue Servitor Empires§!: §E§HBiotrophies§! generate additional §Y$tec_loc_trade_value$§! based on their £happiness£ §HHappiness§!§!\n"
 
  # Pop Conversion
 	civic_tec_machine_composer:0 "Matter Composers"
@@ -2123,15 +2123,15 @@
 
 	civic_tec_machine_tutorship:0 "Organic Tutorship"
 	civic_tec_machine_tutorship_desc:0 "Deep within the initial programming of the collective, the idea of coexistance as the key to progress, as the volability of organic minds, driven by creativity and limited livespan, can supply the logic and rationalism of this machine consciousness, is a main principle; so, during uncountable generations, preparations have been done to correct, teach and improve." 
-	civic_tec_machine_tutorship_tooltip:0 "£job_bio_trophy£ Organic pops living within the empire can have Utopian Living Standards, and be assigned to advanced jobs, provided by special £building£ §YMentorship Colonies§Y.\nAllows the recruitment of non machine leaders.\n\nFor §YRogue Servitor§! empires, £job_bio_trophy£ Free individuals working on Mentorship Colonies will be treated as £job_bio_trophy£ §YBiotrophies§!, providing the same bonuses.\n§HIf the empire has no starting secondary species, one of the Guaranteed habitable worlds will have a suitable organic population.§!\n\n"
+	civic_tec_machine_tutorship_tooltip:0 "£job_bio_trophy£ Organic pops living within the empire can have Utopian Living Standards, and be assigned to advanced jobs, provided by special £building£ §YMentorship Colonies§Y.\nAllows the recruitment of non machine leaders.\n\n§HRogue Servitor Empires§!: §E£job_bio_trophy£ Free individuals§! working on Mentorship Colonies will be treated as £job_bio_trophy£ §HBiotrophies§!, providing the same effects.§!\n§HStarting Effect§!: §EIf the empire has no biological species, one of the Guaranteed habitable worlds will have a suitable organic population.§!\n"
 
 	civic_tec_machine_matrix:0 "Cortex Amalgamators"
 	civic_tec_machine_matrix_desc:0 "Due to an initial lack of resources, this collective resorted to use a part of their organic creators as a productive source, from obtaining energy to using their creativity and invention, without the use of violence... but selective collection and harvesting of what a organic lifeform could give, maintaining it in a complete lethargy ecstasis, living a life they will never experience physically."
-	civic_tec_machine_matrix_tooltip:0 "Starts with 5 pops being a Organic Species, if no other organic species is present, forced to be £job_organic_battery£ §YGrid-Amalgamated§!.\n\n£job_organic_battery£ Grid Amalgamated pops can be assigned to different types of production or effect, based on specific £buildings£ Buildings on the planet, from §Y$tec_loc_research_resources$§! or £unity£ §Y$tec_loc_unity$§! to £job_replicator£ §HExtraction effectivity§!.\n\n§HRogue Servitor§! empires will force a part of their §HBiotrophies§! into special kind of £job_organic_battery£ §YGrid Amalgamated§! Jobs."
+	civic_tec_machine_matrix_tooltip:0 "Starts with 5 pops being a Organic Species, if no other organic species is present, forced to be £job_organic_battery£ §YGrid-Amalgamated§!.\n\n£job_organic_battery£ Grid Amalgamated pops can be assigned to different types of production or effect, based on specific £buildings£ Buildings on the planet, from §Y$tec_loc_research_resources$§! or £unity£ §Y$tec_loc_unity$§! to £job_replicator£ §HExtraction effectivity§!.\n\n§HRogue Servitor Empires§!: §EA percentage of §HBiotrophies§! will adquire a special £job_organic_battery£ §YGrid Amalgamated§! Jobs§!\n"
 
 	civic_tec_machine_crimehostage:0 "Autonomous Penitentiary"
 	civic_tec_machine_crimehostage_desc:0 "The initial purpose and main utility of this Artificial Consciousness was selecting, sorting and keeping criminals at bay at specific installations designed for re-insertion. Now, long time after they achieved sentience, they continue this arduous tasks with the descendants of the descendants of their organic masters, finding the most optimal and streamlined way of ensuring a criminal will never, ever, reincide, even if that means their demise."
-	civic_tec_machine_crimehostage_tooltip:0 "Starts with 5 pops being a Organic Species, if no other organic species is present, forced to be £job_organic_battery£ §YGrid-Amalgamated§!.\n\n£job_organic_battery£ Grid Amalgamated pops can be assigned to different types of production, based on specific £buildings£ Buildings on the planet, from §Y$tec_loc_research_resources$§! or £unity£ §Y$tec_loc_unity$§! to Increasing a £job_replicator£ §HExtraction effectivity§!.\n\n§HRogue Servitor§! empires will force a part of their §HBiotrophies§! into special kind of £job_organic_battery£ Grid Amalgamated Jobs."
+	civic_tec_machine_crimehostage_tooltip:0 "Starts with 5 pops being a Organic Species, if no other organic species is present, forced to be £job_organic_battery£ §YGrid-Amalgamated§!.\n\n£job_organic_battery£ Grid Amalgamated pops can be assigned to different types of production, based on specific £buildings£ Buildings on the planet, from §Y$tec_loc_research_resources$§! or £unity£ §Y$tec_loc_unity$§! to Increasing a £job_replicator£ §HExtraction effectivity§!.\n\n§HRogue Servitor Empires§!: §EA percentage of §HBiotrophies§! will adquire a special £job_organic_battery£ Grid Amalgamated Jobs§!\n"
 
 
 	civic_tec_machine_consensus:0 "Synthetic Consensus"
